update for latest version of drone

--- a/usine-logicielle/docker-compose.yml
+++ b/usine-logicielle/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     image: drone/drone
     privileged: true
     ports:
-      - "8000:8000"
+      - "8000:80"
       - "127.0.0.1:9000:9000"
     volumes:
       - ./drone:/var/lib/drone/
@@ -34,11 +34,10 @@ services:
     environment:
       - DRONE_ADMIN=<admin>
       - DRONE_OPEN=true
-      - DRONE_HOST=http://localhost:8000
-      - DRONE_DEBUG=true
-      - DRONE_SECRET=<drone-secret>
-      - DRONE_GOGS=true
-      - DRONE_GOGS_URL=http://gogs:3000
+      - DRONE_SERVER_HOST=localhost
+      - DRONE_SERVER_PROTO=http
+      - DRONE_RPC_SECRET=<drone-secret>
+      - DRONE_GOGS_SERVER=http://gogs:3000
       - DRONE_GOGS_SKIP_VERIFY=false
     links:
       - gogs
@@ -52,9 +51,9 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      - DRONE_SERVER=drone-server:9000
-      - DRONE_SECRET=<drone-secret>
-      - DRONE_DEBUG=true
+      - DRONE_RPC_HOST=drone-server:9000
+      - DRONE_RPC_PROTO=http
+      - DRONE_RPC_SECRET=<drone-secret>
       - DRONE_PLUGIN_PRIVILEGED=plugins/docker,plugins/docker:*
   registry:
     image: registry
@@ -64,4 +63,3 @@ services:
     volumes:
       - /registry/lib:/var/lib/registry
     restart: always
-
